[package]
name = "neurosploit"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "neurosploit"
path = "src/main.rs"

[dependencies]
harness = { package = "neurosploit-harness", path = "../crates/harness" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
futures.workspace = true
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
