[package]
name = "neurosploit-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "harness"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
futures.workspace = true
walkdir = "2"
regex = "1"
